crypto/BRCryptoAmount.h

    typedef struct BRCryptoAmountRecord *BRCryptoAmount;