bitcoin/BRWalletManager.h

typedef struct BRWalletManagerStruct *BRWalletManager;
typedef void *BRWalletManagerClientContext;
/// MARK: - Callbacks

typedef void
(*BRGetBlockNumberCallback) (BRWalletManagerClientContext context,
                             BRWalletManager manager,
                             int rid);
extern int
bwmAnnounceBlockNumber (BRWalletManager manager,
                        int rid,
                        uint64_t blockNumber);
typedef void
(*BRGetTransactionsCallback) (BRWalletManagerClientContext context,
                              BRWalletManager manager,
                              const char **addresses,
                              size_t addressCount,
                              uint64_t begBlockNumber,
                              uint64_t endBlockNumber,
                              int rid);
extern int // success - data is valid
bwmAnnounceTransaction (BRWalletManager manager,
                        int id,
                        OwnershipGiven BRTransaction *transaction);
extern void
bwmAnnounceTransactionComplete (BRWalletManager manager,
                                int id,
                                int success);
typedef void
(*BRSubmitTransactionCallback) (BRWalletManagerClientContext context,
                                BRWalletManager manager,
                                BRWallet *wallet,
                                OwnershipGiven BRTransaction *transaction,
                                int rid);
extern void
bwmAnnounceSubmit (BRWalletManager manager,
                   int rid,
                   OwnershipGiven BRTransaction *transaction,
                   int error);
typedef void
(*BRTransactionEventCallback) (BRWalletManagerClientContext context,
                               BRWalletManager manager,
                               BRWallet *wallet,
                               BRTransaction *transaction,
                               BRTransactionEvent event);
typedef void
(*BRWalletEventCallback) (BRWalletManagerClientContext context,
                          BRWalletManager manager,
                          BRWallet *wallet,
                          BRWalletEvent event);
typedef void
(*BRWalletManagerEventCallback) (BRWalletManagerClientContext context,
                                 BRWalletManager manager,
                                 BRWalletManagerEvent event);
typedef struct {
    BRWalletManagerClientContext context;

    BRGetBlockNumberCallback  funcGetBlockNumber;
    BRGetTransactionsCallback funcGetTransactions;
    BRSubmitTransactionCallback funcSubmitTransaction;

    BRTransactionEventCallback funcTransactionEvent;
    BRWalletEventCallback  funcWalletEvent;
    BRWalletManagerEventCallback funcWalletManagerEvent;
} BRWalletManagerClient;
extern BRWalletManager
BRWalletManagerNew (BRWalletManagerClient client,
                    BRMasterPubKey mpk,
                    const BRChainParams *params,
                    uint32_t earliestKeyTime,
                    BRSyncMode mode,
                    const char *storagePath);
extern void
BRWalletManagerFree (BRWalletManager manager);
extern void
BRWalletManagerConnect (BRWalletManager manager);
extern void
BRWalletManagerDisconnect (BRWalletManager manager);
extern void
BRWalletManagerScan (BRWalletManager manager);
//
// These should not be needed if the events are sufficient
//
extern BRWallet *
BRWalletManagerGetWallet (BRWalletManager manager);
extern BRPeerManager *
BRWalletManagerGetPeerManager (BRWalletManager manager);