Java/Crypto/src/main/java/com/breadwallet/crypto/libcrypto/CryptoLibrary.java


    /**
     * Original signature : <code>BRCryptoAddress cryptoAddressCreateAsBTC(BRAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoPrivate.h:8</i>
     */
    BRCryptoAddress cryptoAddressCreateAsBTC(BRAddress.ByValue btc);
    /**
     * Original signature : <code>BRCryptoAddress cryptoAddressCreateAsEth(BREthereumAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoPrivate.h:8</i>
     */
    BRCryptoAddress cryptoAddressCreateAsETH(BREthereumAddress.ByValue address);

    /**
     * Original signature : <code>int BRAddressIsValid(const char*)</code><br>
     * <i>native declaration : support/BRAddress.h</i>
     */
    int BRAddressIsValid(String addr);

    /**
     * Original signature : <code>BREthereumAddress addressCreate(const char*)</code><br>
     * <i>native declaration : ethereum/base/BREthereumAddress.h</i>
     */
    BREthereumAddress.ByValue addressCreate(String address);

    /**
     * Original signature : <code>int addressValidateString(const char*)</code><br>
     * <i>native declaration : ethereum/base/BREthereumAddress.h</i>
     */
    int addressValidateString(String addr);


    /**
     * returns the first unused external address (legacy pay-to-pubkey-hash)<br>
     * Original signature : <code>BRAddress BRWalletLegacyAddress(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:37</i>
     */
    BRAddress.ByValue BRWalletLegacyAddress(BRWallet wallet);
    /**
     * true if the address was previously generated by BRWalletUnusedAddrs() (even if it's now used)<br>
     * Original signature : <code>int BRWalletContainsAddress(BRWallet*, const char*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:47</i>
     */
    int BRWalletContainsAddress(BRWallet wallet, String addr);
    /**
     * current wallet balance, not including transactions known to be invalid<br>
     * Original signature : <code>uint64_t BRWalletBalance(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:67</i>
     */
    long BRWalletBalance(BRWallet wallet);
    /**
     * fee-per-kb of transaction size to use when creating a transaction<br>
     * Original signature : <code>uint64_t BRWalletFeePerKb(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:87</i>
     */
    long BRWalletFeePerKb(BRWallet wallet);
    /**
     * Original signature : <code>void BRWalletSetFeePerKb(BRWallet*, uint64_t)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:89</i>
     */
    void BRWalletSetFeePerKb(BRWallet wallet, long feePerKb);
    /**
     * result must be freed using BRTransactionFree()<br>
     * Original signature : <code>BRTransaction* BRWalletCreateTransaction(BRWallet*, uint64_t, const char*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:94</i>
     */
    BRTransaction BRWalletCreateTransaction(BRWallet wallet, long amount, String addr);
    /**
     * returns true if all inputs were signed, or false if there was an error or not all inputs were able to be signed<br>
     * Original signature : <code>int BRWalletSignTransaction(BRWallet*, BRTransaction*, const void*, size_t)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:104</i>
     */
    int BRWalletSignTransaction(BRWallet wallet, BRTransaction tx, byte[] seed, SizeT seedLen);
    /**
     * returns the amount received by the wallet from the transaction (total outputs to change and/or receive addresses)<br>
     * Original signature : <code>uint64_t BRWalletAmountReceivedFromTx(BRWallet*, const BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:154</i>
     */
    long BRWalletAmountReceivedFromTx(BRWallet wallet, BRTransaction tx);
    /**
     * returns the amount sent from the wallet by the trasaction (total wallet outputs consumed, change and fee included)<br>
     * Original signature : <code>uint64_t BRWalletAmountSentByTx(BRWallet*, const BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:159</i>
     */
    long BRWalletAmountSentByTx(BRWallet wallet, BRTransaction tx);
    /**
     * fee that will be added for a transaction of the given amount<br>
     * Original signature : <code>uint64_t BRWalletFeeForTx(BRWallet*, const BRTransaction *)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:179</i>
     */
    long BRWalletFeeForTx(BRWallet wallet, BRTransaction tx);
    /**
     * fee that will be added for a transaction of the given amount<br>
     * Original signature : <code>uint64_t BRWalletFeeForTxAmount(BRWallet*, uint64_t)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:179</i>
     */
    long BRWalletFeeForTxAmount(BRWallet wallet, long amount);
    /**
     * frees memory allocated for wallet, and calls BRTransactionFree() for all registered transactions<br>
     * Original signature : <code>void BRWalletFree(BRWallet*)</code><br>
     * <i>native declaration : bitcoin/BRWallet.h:194</i>
     */
    void BRWalletFree(BRWallet wallet);


    /**
     * retruns a transaction that must be freed by calling BRTransactionFree()<br>
     * Original signature : <code>BRTransaction* BRTransactionParse(const uint8_t*, size_t)</code><br>
     * <i>native declaration : bitcoin/BRTransaction.h:61</i>
     */
    BRTransaction BRTransactionParse(byte[] buf, SizeT bufLen);
    /**
     * returns a deep copy of tx and that must be freed by calling BRTransactionFree()<br>
     * Original signature : <code>BRTransaction* BRTransactionCopy(const BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRTransaction.h:56</i>
     */
    BRTransaction BRTransactionCopy(BRTransaction tx);
    /**
     * (tx->blockHeight and tx->timestamp are not serialized)<br>
     * Original signature : <code>size_t BRTransactionSerialize(const BRTransaction*, uint8_t*, size_t)</code><br>
     * <i>native declaration : bitcoin/BRTransaction.h:66</i>
     */
    SizeT BRTransactionSerialize(BRTransaction tx, byte[] buf, SizeT bufLen);
    /**
     * frees memory allocated for tx<br>
     * Original signature : <code>void BRTransactionFree(BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRTransaction.h:130</i>
     */
    void BRTransactionFree(BRTransaction tx);


    /**
     * Original signature : <code>UInt256 createUInt256 (uint64_t)</code><br>
     * <i>native declaration : ethereum/util/BRUtilMath.h</i>
     */
    UInt256.ByValue createUInt256(long value);
    /**
     * Original signature : <code>char * coerceStringPrefaced (UInt256, int base, const char *)</code><br>
     * <i>native declaration : ethereum/util/BRUtilMath.h</i>
     */
    Pointer coerceStringPrefaced(UInt256.ByValue value, int base, String preface);


    /**
     * Original signature : <code>int bwmAnnounceBlockNumber(BRWalletManager, int, uint64_t)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:11</i>
     */
    int bwmAnnounceBlockNumber(BRWalletManager manager, int rid, long blockNumber);
    /**
     * success - data is valid<br>
     * Original signature : <code>int bwmAnnounceTransaction(BRWalletManager, int, BRTransaction*)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:17</i>
     */
    int bwmAnnounceTransaction(BRWalletManager manager, int id, BRTransaction transaction);
    /**
     * Original signature : <code>void bwmAnnounceTransactionComplete(BRWalletManager, int, int)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:19</i>
     */
    void bwmAnnounceTransactionComplete(BRWalletManager manager, int id, int success);
    /**
     * Original signature : <code>void bwmAnnounceSubmit(BRWalletManager, int, BRTransaction*, int)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:22</i>
     */
    void bwmAnnounceSubmit(BRWalletManager manager, int rid, BRTransaction transaction, int error);
    /**
     * Original signature : <code>BRWalletManager BRWalletManagerNew(BRWalletManagerClient, BRMasterPubKey, const BRChainParams*, uint32_t, BRSyncMode, const char*)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:96</i>
     */
    BRWalletManager BRWalletManagerNew(BRWalletManagerClient.ByValue client, BRMasterPubKey.ByValue mpk, BRChainParams params, int earliestKeyTime, int mode, String storagePath);
    /**
     * Original signature : <code>void BRWalletManagerFree(BRWalletManager)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:98</i>
     */
    void BRWalletManagerFree(BRWalletManager manager);
    /**
     * Original signature : <code>void BRWalletManagerConnect(BRWalletManager)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:100</i>
     */
    void BRWalletManagerConnect(BRWalletManager manager);
    /**
     * Original signature : <code>void BRWalletManagerDisconnect(BRWalletManager)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:102</i>
     */
    void BRWalletManagerDisconnect(BRWalletManager manager);
    /**
     * Original signature : <code>void BRWalletManagerScan(BRWalletManager)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:104</i>
     */
    void BRWalletManagerScan(BRWalletManager manager);
    /**
     * Original signature : <code>BRWallet* BRWalletManagerGetWallet(BRWalletManager)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:117</i>
     */
    BRWallet BRWalletManagerGetWallet(BRWalletManager manager);
    /**
     * Original signature : <code>BRAddress* BRWalletManagerGetUnusedAddrsLegacy(BRWalletManager, uint32_t)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:115</i>
     */
    BRAddress BRWalletManagerGetUnusedAddrsLegacy(BRWalletManager manager, int limit);
    /**
     * Original signature : <code>BRPeerManager* BRWalletManagerGetPeerManager(BRWalletManager)</code><br>
     * <i>native declaration : bitcoin/BRWalletManager.h:119</i>
     */
    BRPeerManager BRWalletManagerGetPeerManager(BRWalletManager manager);


    /**
     * publishes tx to bitcoin network (do not call BRTransactionFree() on tx afterward)<br>
     * Original signature : <code>void BRPeerManagerPublishTx(BRPeerManager*, BRTransaction*, void*, BRPeerManagerPublishTxCallback*)</code><br>
     * <i>native declaration : bitcoin/BRPeerManager.h:80</i>
     */
    void BRPeerManagerPublishTx(BRPeerManager manager, BRTransaction tx, Pointer info, BRPeerManagerPublishTxCallback callback);


    /**
     * <i>native declaration : crypto/BRCryptoPrivate.h</i>
     */
    BRCryptoAmount cryptoAmountCreate (BRCryptoCurrency currency, int isNegative, UInt256.ByValue value);
    /**
     * <i>native declaration : crypto/BRCryptoPrivate.h</i>
     */
    BRCryptoCurrency cryptoCurrencyCreate(String name, String code, String type);
    /**
     * <i>native declaration : crypto/BRCryptoPrivate.h</i>
     */
    BRCryptoUnit cryptoUnitCreateAsBase(BRCryptoCurrency currency, String name, String symbol);
    /**
     * <i>native declaration : crypto/BRCryptoPrivate.h</i>
     */
    BRCryptoUnit cryptoUnitCreate(BRCryptoCurrency currency, String name, String symbol, BRCryptoUnit base, byte decimals);
}
